# level2_dkt-recsys-04

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 버그-수정.md  새로운-기능-추가.md
code/FM/: main.py  pyproject.toml
code/FM/src/: utils.py
code/FM/src/data/: __init__.py  context_data.py  dataset.py
code/FM/src/train/: trainer.py
code/MF/: README.md  main.py  pyproject.toml
code/MF/MF_util/: __init__.py  args.py  dataset.py  models.py  utils.py
code/boosting/: README.md  inference.py  inference_cv.py  pyproject.toml  train.py  train_cv.py  train_oof.py  train_origin.py  train_temp.py
code/boosting/boosting_util/: args.py  custom_cv.py  datasets.py  feature_engineering.py  models.py  tune.py  utils.py
code/catboost/: README.md  inference.py  main.py  pyproject.toml  train.py  train_cv.py
code/catboost/catboost_util/: args.py  datasets.py  feature_engineering.py  models.py  utils.py
code/ensembles/: ensemble_sequence.ipynb
code/lgbm/: .gitignore  README.md  inference.py  pyproject.toml  train.py
code/lgbm/lgbm_util/: args.py  datasets.py  models.py  utils.py
code/light-gcn/: README.md  inference.py  pyproject.toml  train.py
code/light-gcn/lightgcn_utils/: args.py  datasets.py  models.py  trainer.py  utils.py
code/oof-stacking/: add_catboost_s_train_s_test.ipynb  args_list.json  main.py  pyproject.toml
code/oof-stacking/oof_stacking_util/: args.py  datasets.py  datloader.py  models.py  trainer.py  utils.py
code/sequence/: .gitignore  README.md  new_project.py  pyproject.toml  test.py  train.py  tune.py
code/sequence/base/: base_data_loader.py  base_model.py
code/sequence/config/: LastQueryModel.json
code/sequence/data_loader/: data_loaders.py
code/sequence/model/: loss.py  metric.py  model.py
code/sequence/sequence_utils/: datasets.py  models.py  utils.py
code/sequence/trainer/: trainer.py
code/sequence_/: README.md  inference.py  pyproject.toml  train.py  tune.py
code/sequence_/sequence_utils/: args.py  datasets.py  models.py  trainer.py  utils.py
code/utils/: EDA_val_1.ipynb  EDA_val_2.ipynb  EDA_val_3.ipynb  EDA_val_4.ipynb  EDA_val_5.ipynb  error_analyze.ipynb  feature_selection.py  output_visuallization.ipynb  pyproject.toml  visualization.ipynb  visualization_BERT_ver1.ipynb  visualization_CatBoost_ver1.ipynb  visualization_LQTM_ver1.ipynb  visualization_LSTMATTN_ver1.ipynb  visualization_LSTM_ver1.ipynb  visualization_worst_case.ipynb
ensembles/: ensemble_oof_stacking.ipynb
