[tool.poetry]
name = "mf"
version = "0.1.0"
description = ""
authors = ["zsmalla <malla7454@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
pandas = "^2.0.1"


[tool.poetry.group.dev.dependencies]
numpy = "^1.24.3"
pandas = "^2.0.1"
scipy = "^1.10.1"
scikit-learn = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
