[tool.poetry]
name = "lightgcn_model"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.2.2"
wandb = "^0.15.2"
torch = "1.13.1"
black = "21.12b0"


[tool.poetry.group.dev.dependencies]
pandas = "^2.0.1"
torch-geometric = "^2.3.1"
ipykernel = "^6.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
