[tool.poetry]
name = "sequence"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pytorch_template"}]

[tool.poetry.dependencies]
python = "^3.10"
lightgbm = "^3.3.5"
xgboost = "^1.7.5"
pyyaml = "^6.0"
cairosvg = "^2.7.0"
ipykernel = "^6.23.0"
jupyter = "^1.0.0"
torch = "1.13"
transformers = "^4.28.1"
wandb = "^0.15.2"
tensorboard = "^2.13.0"
numpy = "1.23.2"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
pandas = "^2.0.1"
matplotlib = "^3.7.1"
seaborn = "^0.12.2"
lightgbm = "^3.3.5"
catboost = "^1.2"
shap = "^0.41.0"
requests = "^2.30.0"
category-encoders = "^2.6.0"
patsy = "^0.5.3"
eli5 = "^0.13.0"
ipykernel = "^6.23.0"
missingno = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120