[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
wandb = "^0.15.2"
pandas = "^2.0.1"
numpy = "^1.24.3"
scikit-learn = "^1.2.2"
catboost = "^1.2"
lightgbm = "^3.3.5"
tqdm = "^4.65.0"
black = "^23.3.0"

[tool.poetry.group.dev.dependencies]
lightgbm = "^3.3.5"
catboost = "^1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
